Hover effect added

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,12 @@
 .left{
     left: -82px;
 }
+.left:hover{
+    transform: scale(1.2);
+}
 .right{
     right: -82px;
+}
+.right:hover{
+    transform: scale(1.2);
 }
